Fix relative divs overlapping with the header
This bug was only visible in landscape mode.

--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -12,6 +12,7 @@
       top: 0px;
       height: 50px;
       width: 100%;
+      z-index: 1;
 
       nav {
         width: 100%;
